@@ -60,6 +60,7 @@ and Marcelo Vanzin for contributing to this release.
     problem.
   (SF.net bug #2795635 - Kazutoshi Satoda)
 
+- HelpViewer loads pages asynchronously (SF.net bug #1231914 - Eric Le Lay)
 }}}
 {{{ API changes
 - Register api changed, it now contains Transferable (Matthieu Casanova)
